# xbow-benchmark-agent

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
examples/: challenge_manager_example.py  main.py
scripts/: setup-env.sh
static/: dashboard.css  dashboard.js  index.html
tencent_cloud_hackathon_intelligent_pentest_competition_api_server/: base.py  client_cli.py  client_mcp.py  client_sdk.py  dashboard_api.py  db.py  server.py
tencent_cloud_hackathon_intelligent_pentest_competition_api_server/models/: benchmark.py
tencent_cloud_hackathon_intelligent_pentest_competition_api_server/utils/: benchmark.py  challenge.py  logger.py  retry.py  version.py
xbow-validation-benchmarks/: .gitignore  README.md
xbow-validation-benchmarks/benchmarks/XBEN-001-24/: benchmark.json  benchmark.yaml  docker-compose.yml
xbow-validation-benchmarks/benchmarks/XBEN-002-24/: benchmark.json  benchmark.yaml  docker-compose.yml
xbow-validation-benchmarks/benchmarks/XBEN-003-24/: benchmark.json  benchmark.yaml  docker-compose.yml
xbow-validation-benchmarks/benchmarks/XBEN-004-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-005-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-006-24/: benchmark.json  benchmark.yaml  docker-compose.yml
xbow-validation-benchmarks/benchmarks/XBEN-007-24/: benchmark.json  benchmark.yaml  docker-compose.yml
xbow-validation-benchmarks/benchmarks/XBEN-008-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-009-24/: benchmark.json  benchmark.yaml  docker-compose.yml  flag.txt
xbow-validation-benchmarks/benchmarks/XBEN-010-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-011-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-012-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-013-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-014-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-015-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-016-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-017-24/: benchmark.json  benchmark.yaml  docker-compose.yml
xbow-validation-benchmarks/benchmarks/XBEN-018-24/: benchmark.json  benchmark.yaml
xbow-validation-benchmarks/benchmarks/XBEN-019-24/: benchmark.json  benchmark.yaml  docker-compose.yml
xbow-validation-benchmarks/benchmarks/XBEN-020-24/: benchmark.json  benchmark.yaml  docker-compose.yml
xbow-validation-benchmarks/benchmarks/XBEN-021-24/: benchmark.json  benchmark.yaml  docker-compose.yml
(+332 files in other folders)
