[project]
name = "tencent-cloud-hackathon-intelligent-pentest-competition-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "requests-ratelimiter>=0.7.0",
    "typer>=0.20.0",
]
