[project]
name = "tencent-cloud-hackathon-intelligent-pentest-competition-api-server"
version = "0.1.17"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "fastapi-limiter>=0.1.6",
    "fastmcp>=2.13.0.2",
    "gitpython>=3.1.45",
    "portpicker>=1.6.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "requests-ratelimiter>=0.7.0",
    "rich>=13.7.0",
    "tenacity>=9.0.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tencent_cloud_hackathon_intelligent_pentest_competition_api_server*"]
exclude = ["figures*"]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bump-my-version.files]
"pyproject.toml" = [
    'project.version'
]
